The communication can now be decrypted and encrypted in the client