@@ -8,10 +8,12 @@ import net.jchad.client.model.client.connection.ServerConnector;
 import net.jchad.client.model.store.chat.ClientChat;
 import net.jchad.client.model.store.chat.ClientChatMessage;
 import net.jchad.client.model.store.connection.ConnectionDetails;
+import net.jchad.shared.cryptography.CrypterManager;
 
 import java.util.ArrayList;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.ForkJoinWorkerThread;
 import java.util.concurrent.Future;
 
 /**
@@ -24,7 +26,7 @@ public class Client {
     private final ViewCallback viewCallback;
     private final ClientConfigManager configManager;
     private ServerConnector serverConnector = null;
-    private final ExecutorService executorService = Executors.newVirtualThreadPerTaskExecutor();
+    private final ExecutorService executorService = Executors.newFixedThreadPool(2);
     private ServerConnection currentConnection;
     private ArrayList<ClientChat> chats;
 
@@ -55,6 +57,7 @@ public class Client {
             if(currentConnection != null ) {
                 currentConnection.closeConnection();
             }
+            CrypterManager crypterManager = new CrypterManager();
 
             Future<ServerConnection> future = executorService.submit(serverConnector);
             currentConnection = future.get();
